--- a/static/sass/partials/_base.scss
+++ b/static/sass/partials/_base.scss
@@ -8,7 +8,7 @@ $color-accent: #c9a96e;
 
 // Cozy Witch
 $cozy-green: #4a5240;
-$cozy-purple: #7b5ea7;
+$cozy-purple: #b58fed;
 $cozy-cream: #f5f0e8;
 $cozy-orange: #e8834a;
 
